    contain LANG=.
  * Added french debconf translation, patch thanks to, Jean-Luc Coulon.
    (Closes: Bug#290389)
  * Re-wrote the package templates for DTSG compliance, patch thanks to,
    Martin Quinson and Christian Perrier. (Closes: Bug#288805)
  * Added chezh translation, patch thanks to Miroslav Kure.
  * Reduced the changes necessary to update packages to a new python version
    to one line. Thanks to a suggestion from Matthias Klose.
  * Temporarily patch rules to install zope modules from the zope tree because
    no zope3 package exists yet. Sigh! more lintian warnings, but it's
    temporary and way too much effort to fix these.
  * General cleanup:
    - Removed debdirclean makefile target called from top level directory.
    - Removed dependency references to old schooltool-server package.

 -- Brian Sutherland <jinty@web.de>  Thu, 25 Nov 2004 21:26:40 +0100

schooltool (0.7.99+0.8rc1-1) unstable; urgency=low

  * New upstream release: 0.8 release candidate 1.
  * Moved configuration file template to /usr/share (Policy 10.7.3).
  * Try to remove configuration file on purge (10.7.3).
  * Depend on ssl-cert rather than copy debconf templates at build.
    Be careful about handling unavailable templates in .config.
  * I18n of schooltool debconf templates with po-debconf.
  * Fixed bug where the ssl_certificate configuration option was not added
    to the configuration file if the certificate existed before installation.
  * Moved the persistent, zope, BTrees and ZDOB modules to /usr/lib and
    removed all links from /usr/share to /usr/lib.
  * Changed priority to extra.
  * Fixed rules so that binary-arch and binary-indep targets build the
    correct packages (Closes: Bug#279111).
  * On log rotation, only restart the server once and do not produce any
    output on success.
  * Changed dependency on python-tcpwrap from suggests to recommends.
  * Added database versioning code. If the database is thought to be