@@ -26,7 +26,7 @@ sslcert=/etc/$package/$package.cert.pem
 sslkey=/etc/$package/$package.privkey.pem
 sslconf=/etc/$package/ssl-cert.cnf
 config=/etc/$package/$package.conf
-db_version=0.8     # TODO - delete this when schooltool can upgrade it's own database
+db_version=0.9.1     # TODO - delete this when schooltool can upgrade it's own database
 
 # Helper Functions
 set_simple () {
